_sass/_navigation.scss
.navigation-bar {
    background-color: orange;
    height: 24px;
    padding-top: 8px;
    padding-bottom: 5px;
    color: white;
    display: flex;
    display: -webkit-flex;
    justify-content: center;
    -webkit-justify-content: center;
    animation-name: body-background;
    animation-duration: 10s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
    animation-timing-function: linear;
    position: fixed;
    top: 0px;
    width: 100%;
    z-index: 10;
}
.navigation-bar__item {
    display: inline-block;
    float: left;
    padding-right: 20px;
}
.navigation-bar__item-link {
    color: white;
}
.navigation-bar__item-link--active {
    text-decoration: underline;
}
.navigation-bar__item-link--active:hover {
    cursor: default;
}

